# furigana-accuracy-benchmark

./: README.md  challenge-sentences.json  index.js  package-lock.json  package.json
analyzers/: run-all.sh
analyzers/fugashi/: output.json  runner-driver.sh
analyzers/fugashi/runner/: main.py  pyproject.toml
analyzers/spacy[ja]/: output.json  runner-driver.sh
analyzers/spacy[ja]/runner/: main.py  pyproject.toml
analyzers/sudachi-wasm/: output.json  runner-driver.sh
analyzers/sudachi-wasm/runner/: main.js  package-lock.json  package.json
analyzers/yomikata/: output.json  runner-init.sh  runner.sh
analyzers/yomikata/runner/: README.md  main.py  pyproject.toml
public/: benchmark-results.json  index.html
