[project]
name = "spacy_runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "ja-core-news-trf",
    "spacy[ja]>=3.8.11",
]

[tool.uv.sources]
ja-core-news-trf = { url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_trf-3.8.0/ja_core_news_trf-3.8.0-py3-none-any.whl" }
