[project]
name = "yomikata-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "plac==1.3.5",
    "yomikata==0.0.4",
]

[tool.uv.sources]
yomikata = { git = "https://github.com/passaglia/yomikata.git" }

[tool.uv]
exclude-newer = "2023-01-30T15:00:00Z"
prerelease = "allow"
